added some more styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         tool and recruit attendees, volunteers, and donors for their events. This will also serve as a resource 
         for people to learn about the organizations that are working to end homelessness in King County.</p>
     </div>
-    <div class="mb-4 mx-auto text-center">
+    <div class="mb-4 mx-auto text-center p-3">
         <h2>Our Team</h2>
     </div>
 
@@ -79,10 +79,11 @@
           </div>
     </div>
 </div>
-<footer class="page-footer font-small mx-4 p-3">
+<footer class="page-footer font-small mx-4 p-3" id="">
     <div class="container-fluid text-center text-md-left">
       <div class="row">
         <div class="col-md-6 mt-md-0 mt-3">
+
           <h5 class="text-uppercase">Contact Us</h5>
           <ul>
               <li>
