fixed image sizing and text scaling

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <h3 id="desc">Discover and share opportunites to engage in the fight to end homelessness in King County</h3>
         </div>
     </header>
-    <div class="mx-4 p-3" id="description">
+    <div class="p-3" id="description">
         <h2>Our Work</h2>
         <div class="row">
-            <div class="col-4">
-                <img class="center" src="images/Graphic-1.png" alt="Graphic of the General Process">
+            <div class="col-lg-4 m-auto">
+                <img class="img-fluid" align="center" src="images/Graphic-1.png" alt="Graphic of the General Process">
             </div>
-            <div class="col-8" id="proj-descr">
-                <p>The Home Project, sponsored by Pyramid Communications, is a collaborative effort across
+            <div class="col-lg-8 my-auto" id="proj-descr">
+                <p id="proj-descr-text">The Home Project, sponsored by Pyramid Communications, is a collaborative effort across
                     organizations,
                     individuals, and businesses. The aim of the project is to share information and resources in the
                     fight
